# hw01-data-model

./: README.md  pyproject.toml
hw01/: __main__.py  cli.py  container.py
tests/: conftest.py  test_cli.py  test_container.py
