[project]
name = "hw01-data-model"
version = "0.1.0"
description = "ДЗ 1 — Модель данных, CLI, пакетирование"
requires-python = ">=3.12"
dependencies = []

[project.scripts]
# Student fills this in based on their variant
# Example: my-wc = "hw01.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["hw01"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[dependency-groups]
dev = ["pytest>=8.0", "ruff>=0.8", "mypy>=1.13"]
